<resources>
    <string name="app_name">Dicoding Fundamental Submission 2</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location : \n%s </string>
    <string name="repository">Repository : \n%s </string>
    <string name="company">Company : \n%s </string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="githubLogo">GithubLogo</string>
    <string name="setting">Setting</string>
    <string name="back_button">Back Button</string>
    <string name="favorite">Favorite</string>
    <string name="layoutAvatar">LayoutAvatar</string>
    <string name="setReminder">Reminder ON / OFF</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>