<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/githubColor"
    tools:context=".UserDetail">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAvatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivDetailAvatar"
            tools:src="@tools:sample/avatars"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDetailUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAvatar" />

    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailUsername" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/grey"
        android:minHeight="?actionBarSize"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/vpFragmentPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed" />

    <TextView
        android:id="@+id/tvRepository"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/repository"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/tvDetailCompany"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

    <TextView
        android:id="@+id/tvDetailCompany"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/company"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

    <TextView
        android:id="@+id/tvDetailLocation"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDetailCompany"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpFragmentPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="341dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>